src/styles/styles.css
/* ... */
.noAnimation,
.noAnimation:before,
.noAnimation:after {
  transition: none !important;
  animation: none !important;
}


option {
  background-color: var(--background-color);
  text-align: center;
}

option, select {
  text-align: center;
  white-space: nowrap;
  align-items: center;
}

/* If targeting with a class */
.right-link {
  position: absolute;
  right: 0;

}

/* Optional but recommended: Clear floats in the header */
header::after {
  content: "";
  display: table;
  clear: both;
}

.offline, .dnd {
  background-color: #f94c5780;
  border: #f94c57 2px solid;
  border: #f94c5780 2px solid;
  box-shadow: rgba(249, 76, 87, 0.50) 0px 0px 20px;
  transition: background-color 0.2s;
}

.dcloading {
  background-color: #909090;
  background-color: #90909080;
  border: #90909080 2px solid;
  box-shadow: rgba(140, 140, 140, 0.50) 0px 0px 20px;
  transition: background-color 0.2s;
}

.online {
  background-color: #53d769;
  background-color: #53d76980;
  border: #53d769 2px solid;
  border: #53d76980 2px solid;
  box-shadow: rgba(83, 215, 105, 0.50) 0px 0px 20px;
  transition: background-color 0.2s;
}

.idle {
  background-color: #f2841d;
  background-color: #f2841d80;
  border: #f2841d 2px solid;
  border: #f2841d80 2px solid;
  transition: background-color 0.2s;
}

div#discord{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#discordName, #discordActivity, #discordNameUser{
  justify-content: center;
  align-items: center;
  padding: 8px;
  border-radius: 12px;
  margin: 12px;
  color: var(--project-color);
  text-align: center;
}

#discordNameUser{
  color: var(--text-color);
}

.discordPFP {border-radius: 10px;}


#discordActivity { 
  min-width: 15vw;
  word-wrap: break-word;
  max-width: 350px;
}

#activityLogoLarge {
  border-radius: 5px;
}

#activityLogoSmall {
  border-radius: 25%;
  width: 32px;
  height: 32px;
  position: absolute;
  transform: translate(-200%, 250%);
}


.discordName{
  display: flex;
}


div#loading>div{
  display: flex;
  align-items: center;
  justify-content: center;
}

.lds-ring {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
}
.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 64px;
  height: 64px;
  margin: 8px;
  border: 8px solid #fff;
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: rgb(var(--accent-color)) transparent transparent transparent;
}
.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}
.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}
.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}

.mcBackground{
  background: var(--mcBackground);
}

.mcFont{
  font-family: Pixel, Jost, sans-serif;
}

#wrapperMc{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#mcJoinButtons{
  width: 85vw;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  position: relative;
}


button.mcMenu{
  text-transform: uppercase;
  flex: 1; /* Buttons will share the available space equally */
  margin: 0; /* Remove default margin for better spacing */
  padding: 10px; /* Add some padding for visual separation (optional) */
  border-radius: 0;
  font-size: larger;
}
.hide{
  display: none;
}
.mcShow{
  display: block;
}

#downloads{
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

#downloads>a{
  margin: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

section.titleUnderText{
  max-width: 80vw;
}

div.centererWrapper{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.mcMapButton {
  position: absolute;
}

.imgWorld {
  position: absolute;
  aspect-ratio: 16 / 9; /* typical video aspect ratio */
  width: 65vw;
  background-image: url('/images/world.png');
  background-size: contain;
}

#serverJoin{
  background-color: #0909095c;
  padding: 24px;
  border-radius: 12px;

}

#bedrockJoinWrapper>p{
text-align: left;
font-size: large;
color: black;
}

.mcbuttonjoin{
  width: 400px;
  height: 40px;
  margin: auto;
  background: url(/src/images/background/mc-button.png) no-repeat;
  color: #fff;
  text-align: center;
  line-height: 42px;
  font-size: larger;
  font-weight: normal;
  text-shadow: 2px 2px 0px #1a1a1a;
  margin-bottom: 8px;
}

#innerContentBedrock{
  background-color: rgb(22, 22, 22);
  padding: 8px;
}

.img-holder{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(5px);

  aspect-ratio: 16 / 9;
  width: 65vw;
}

.img-holder>p{
  margin: 12px;
}
.img-holder>a{
  padding: 6px;
  background-color: rgba(var(--darker-accent-color), 0.30);
}



#activityName, #activityState, #activityDetails{
  text-align: left;
  color: var(--project-color);
}

#activityName{
  color: var(--text-color);
}

#activityDetails{
  color: var(--subtitle-color);
}

#timeremaning>p{
  text-align: inherit;
  color: var(--project-color);
}

#activityTime{
  display: inline;
  color: var(--project-color);
  font-family: SevenSegment, monospace, Jost, sans-serif;
} 

label, li>p {
  color: var(--project-color);
}

img {
  pointer-events: none;
}

textarea{
  appearance: none;
  resize: none;
  overflow: scroll;
  width: 80%;
  height: 10vh;
  max-width: 420px;
  overflow-x: hidden;
  list-style-type: none;
  color: white;
  font-family: Jost, sans-serif;
  background-color: #121212;
  background-color: rgba(var(--accent-color), 0.10);
  border: none;
  padding: 8px;
  text-decoration: none;
  font-size: initial;
  transition: background-color .2s;
  font-size: initial;
  touch-action: manipulation;
  border-radius: 12px;
  -webkit-appearance: none;
  appearance: none;
}
/* ... */

